# gliner-guard-serve

./: .dockerignore  .env.example  .env.ray-a100-4w.example  .gitignore  Dockerfile.locust  Makefile  README.md  docker-compose.yml
docs/: a100-ray-serve-uni-results-2026-04-29.md  instruction.md  litserve-baseline.md  litserve-flashattn.md  litserve-flashdeberta.md  onnx-cuda-int8.md  onnx-cuda-static-int8.md  onnx.md  ray-serve-a100-4worker-config.md  ray-serve-dynamic-batching-dev.md  ray-serve-grpc-dev.md  ray-serve-rest-nobatch.md  ray-serve-sweep-2026-04-18-final.csv  ray-serve-sweep-2026-04-18-final.md  ray-serve-sweep-2026-04-18-partial.csv  ray-serve-sweep-2026-04-18-partial.md  vllm-experiments-v2.md  vllm-experiments-v3.md  vllm-manual-configs.md  vllm.md
litserve-baseline/: bench.py  main.py  pyproject.toml
onnx/: README.md  main.py  pyproject.toml
ray-serve/: pyproject.toml  runtime_config.py  serve_app.py  serve_app_grpc.py
ray-serve/proto/: gliner_guard.proto
ray-serve/tests/: test_runtime_config.py
results/: README.md  onnx-int8-m4max-cpu.csv  onnx-int8-m4max-cpu.html
script_tensor_rt/: gliner2_tensorrt_pipeline.ipynb
scripts/: curate_ray_results.py  gen-benchmark-table.py  generate_data.py  plot_gliner2_runtime_comparison.py  run-batch-benchmarks.sh  run-grpc-benchmarks.sh  run-nodocker-benchmarks.sh  update_vllm_docs_bench.py
test-script/: prompts.csv  pyproject.toml  responses.csv  test-gliner-grpc.py  test-gliner-vllm.py  test-gliner.py
vllm/: bench.py  experiments.sh  pyproject.toml  serve.sh  setup.sh
vllm-factory/: pyproject.toml
(+198 files in other folders)
