[project]
name = "litserve-baseline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gliner2>=1.2.4",
    "httpx>=0.28.1",
    "litserve>=0.2.17",
    "requests>=2.32.5",
    "urllib3>=2.6.3",
    "torch==2.8.0",
    "transformers>=5.0.0",
    "python-dotenv>=1.2.2",
]
