[project]
name = "onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gliner2-onnx @ git+https://github.com/bogdanminko/gliner2-onnx.git@feature/batch-inference",
    "hf-transfer>=0.1.9",
    "litserve>=0.2.17",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "torch>=2.11.0",
    "transformers>=5.0.0",
]
